# storage/api-docs/api-docs.json
@@ -372,6 +372,59 @@
                 ]
             }
         },
+        "/api/user/profile": {
+            "put": {
+                "tags": [
+                    "Profile"
+                ],
+                "summary": "Update own profile",
+                "operationId": "4a75ccb2b8a3aa3f7230a2a2dd1de04d",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "name": {
+                                        "type": "string"
+                                    },
+                                    "email": {
+                                        "type": "string",
+                                        "format": "email"
+                                    },
+                                    "password": {
+                                        "type": "string",
+                                        "format": "password"
+                                    },
+                                    "password_confirmation": {
+                                        "type": "string",
+                                        "format": "password"
+                                    },
+                                    "avatar": {
+                                        "type": "string",
+                                        "format": "binary"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Profile updated successfully"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    }
+                },
+                "security": [
+                    {
+                        "sanctum": []
+                    }
+                ]
+            }
+        },
         "/api/posts/{post}/comments": {
             "get": {
                 "tags": [
@@ -723,6 +776,10 @@
         {
             "name": "User",
             "description": "User"
+        },
+        {
+            "name": "Profile",
+            "description": "Profile"
         },
         {
             "name": "Comments",
